# accord_mobile_server_rs

./: .env.example  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: performance-plan.md
docs/benchmarks/: 2026-05-15-go-vs-rust-lmdb-v2-stress.md  2026-05-15-healthz-tuning.md  2026-05-15-hyper-http1-tuning.md  2026-05-15-local-go-vs-rust-restored-erp.md  2026-05-15-session-store-lmdb.md  2026-05-15-sql-pushdown.md
docs/superpowers/plans/: 2026-06-12-erpnext-manufacturing-order-log.md  2026-06-12-erpnext-work-order-hybrid-sync.md
src/: app.rs  app_local_store.rs  app_tests.rs  config.rs  error.rs  fcm.rs  google_sheets.rs  main.rs
src/config/: tests.rs
src/core/: apparatus_groups.rs  authz.rs  authz_catalog.rs  authz_tests.rs  calculate_orders.rs  formula.rs  formula_tests.rs  mod.rs
src/core/admin/: models.rs  ports.rs  service.rs
src/erpdb/: admin.rs  mod.rs  reader.rs  reader_pending_sql.rs  reader_rows.rs  reader_sql.rs  stock_entry.rs  supplier_summary.rs  werka_archive.rs  werka_home.rs  werka_lookup.rs  werka_pending.rs  werka_status_breakdown.rs  werka_status_details.rs  werka_summary.rs  werka_suppliers.rs
src/erpnext/: client.rs  customers.rs  mod.rs  production_order.rs  purchase_receipt.rs  stock_entry.rs  suppliers.rs
src/http/: admin_route_tests.rs  archive_pdf.rs  calculate_route_tests.rs  customer_route_tests.rs  gscale_route_tests.rs  mod.rs  notification_comment_route_tests.rs  profile_route_tests.rs  push_route_tests.rs  rezka_route_tests.rs  router.rs  router_tests.rs  stock_entry_route_tests.rs  supplier_dispatch_route_tests.rs  supplier_read_route_tests.rs  supplier_unannounced_route_tests.rs  werka_archive_route_tests.rs  werka_confirm_route_tests.rs  werka_customer_issue_route_tests.rs  werka_directory_route_tests.rs  werka_route_tests.rs  werka_unannounced_route_tests.rs
src/rps/: client.rs
src/store/: apparatus_group_store.rs  calculate_order_store.rs  mod.rs  production_map_store.rs  profile_store.rs  push_token_store.rs  role_store.rs
(+95 files in other folders)
