[package]
name = "accord_mobile_server_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
async-trait = "0.1"
base64 = "0.22"
data-encoding = "2"
dotenvy = "0.15"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "fs", "sync"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
