[package]
name = "accord_mobile_server_rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Standalone Rust mobile backend for Accord ERPNext workflows."
repository = "https://github.com/WIKKIwk/accord_mobile_server_rs"
readme = "README.md"

[dependencies]
axum = "0.8"
async-trait = "0.1"
aes = "0.8"
base64 = "0.22"
bincode = "1.3"
cbc = { version = "0.1", features = ["alloc"] }
data-encoding = "2"
dotenvy = "0.15"
hmac = "0.12"
jsonwebtoken = "9"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["derive", "mysql", "runtime-tokio-rustls"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "fs", "sync"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
heed = "0.22.1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
